Clean tutorial some more

--- a/Linked Geodata Tutorial.ipynb
+++ b/Linked Geodata Tutorial.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,7 @@
     "\n",
     "from rdflib import Graph, Namespace, RDF, RDFS, OWL, Literal, URIRef\n",
     "from folium.map import *\n",
-    "import shapely.wkt\n",
-    "from IPython.display import display"
+    "import shapely.wkt"
    ]
   },
   {
@@ -288,7 +287,7 @@
     "folium.GeoJson(buildingFunctions, name=\"BuildingFunctions\").add_to(m)\n",
     "folium.LatLngPopup().add_to(m)\n",
     "folium.LayerControl().add_to(m)\n",
-    "display(m)"
+    "m"
    ]
   },
   {
@@ -588,7 +587,7 @@
     "folium.GeoJson(buildingsResidential_gdf.geometry, name=\"Buildings with residential function\", style_function=lambda feature: {'fillColor': 'White', 'color': 'Green'}).add_to(m)\n",
     "folium.LatLngPopup().add_to(m)\n",
     "folium.LayerControl().add_to(m)\n",
-    "display(m)"
+    "m"
    ]
   },
   {
@@ -644,7 +643,7 @@
     "folium.GeoJson(buildings.geometry, name=\"Buildings\", style_function=lambda feature: {'fillColor': 'White', 'color': 'Red'}).add_to(m)\n",
     "folium.GeoJson(buildingsResidential_gdf.geometry, name=\"Buildings with residential function\", style_function=lambda feature: {'fillColor': 'White', 'color': 'Green'}).add_to(m)\n",
     "folium.LayerControl().add_to(m)\n",
-    "display(m)"
+    "m"
    ]
   },
   {
